purhcase btton spacing issue fixed

--- a/website/projects/scimaps/src/app/shared/components/item-drawer/item-drawer.component.scss
+++ b/website/projects/scimaps/src/app/shared/components/item-drawer/item-drawer.component.scss
@@ -23,6 +23,10 @@ $breakpoint: 768px;
       display: flex;
       flex-direction: row;
       margin-bottom: 1rem;
+
+      .sci-drawer-header {
+        margin-bottom: 0;
+      }
     }
     .purchase-button {
       height: 2.25rem;
